[package]
name = "hello_world"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera_controllers = "0.31.0"
find_folder = "0.3.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
image = "0.23.0"
piston = "0.49.0"
piston_window = "0.107.0"
piston-ai_behavior = "0.31.0"
piston2d-graphics = "0.36.0"
piston2d-sprite = "0.59.0"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.6.0"
piston2d-opengl_graphics = "0.72.0"
pistoncore-glutin_window = "0.63.0"
rand = "0.7"
shader_version = "0.6.0"
vecmath = "1.0.0"
