[package]
name = "user_input"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "piston-example-user_input"
path = "src/main.rs"

[dependencies]
piston = "0.49.0"
piston2d-opengl_graphics = "0.72.0"
piston2d-graphics = "0.36.0"
piston2d-touch_visualizer = "0.25.0"

[dependencies.pistoncore-sdl2_window]
version = "0.63.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.64.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.63.0"
optional = true

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]